[package]
name = "bft"
version = "0.1.0"
authors = ["Pedro Alvarez <pedro.alvarez@codethink.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "bft_interp",
    "bft_types",
]

[dependencies]
bft_interp = { path = "bft_interp", version = "0" }
bft_types = { path = "bft_types", version = "0" }
structopt = "0.3"